methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:5: error: not found: value setColorBrosse
  setColorBrosse(c);
  ^MethodsPicture:19: error: value BLEU is not a member of object java.awt.Color
   faireV(Color.BLEU)
                ^MethodsPicture:51: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime8.MethodsPicture'
override def run() {
             ^